@@ -46,7 +46,7 @@ class Map(PortalContent):
     security = ClassSecurityInfo()
 
     def __init__(self, id, url, name=None, title=None, size=(),
-                 bounds=(), srs=None, format=None, layers=[]):
+                 bounds=(), srs='', format=None, layers=[]):
         """Initialize"""
         # fix url
         self.url = url.rstrip('?&')
@@ -58,7 +58,7 @@ class Map(PortalContent):
         self.formatlist = cap.getmapformats()
         self.srslist = cap.layersrs()
         self.size = tuple(size)
-        self.bounds = tuple(bounds)
+        self.bounds = cap.getBounds()
         self.srs = srs
         self.format = format
         self.visible_layers = tuple(layers)
@@ -116,7 +116,7 @@ class Map(PortalContent):
 
     security.declareProtected(ManagePortal, 'editMap')
     def editMap(self, url='', name='', title='', size=[], bounds=[],
-                srs=None, format=None, layers=[]):
+                srs='', format=None, layers=[]):
         """edit map attributes"""
 
         # Here, reinit the map by fetching back the map from the server
@@ -147,7 +147,7 @@ class Map(PortalContent):
 
     security.declareProtected(ManagePortal, 'manage_editMap')
     def manage_editMap(self, url='', name='', title='', size=[], bounds=[],
-                srs=None, format=None, layers=[], REQUEST=None):
+                srs='', format=None, layers=[], REQUEST=None):
         """web front end to editMap"""
         self.editMap(url=url, name=name, title=title, size=size, bounds=bounds,
                      srs=srs, format=format, layers=layers)
